--- a/hermes/package.json
+++ b/hermes/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "xlsx": "^0.18.5"
   }
 }
